--- a/src/resource/views/admin/detail/purchase.hbs
+++ b/src/resource/views/admin/detail/purchase.hbs
@@ -26,7 +26,7 @@
       </tr>
       <tr>
         <td>Ghi Chú</td>
-        <td>{{purchaseInfo.supplierInfo.note}}</td>
+        <td>{{purchaseInfo.note}}</td>
       </tr>
       <tr>
         <td>Tổng Tiền</td>
