--- a/src/resource/views/admin/detail/supplier.hbs
+++ b/src/resource/views/admin/detail/supplier.hbs
@@ -25,6 +25,10 @@
         <td><input type="text" id="address" name="address" value="{{supplierInfo.address}}"></td>
       </tr>
       <tr>
+        <td>Tổng đơn nhập</td>
+        <td>{{supplierInfo.quantity}}</td>
+      </tr>
+      <tr>
         <td>Tổng chi phí</td>
         <td>{{formatNumber supplierInfo.totalCost}}</td>
       </tr>
