--- a/src/resource/views/admin/all/purchase.hbs
+++ b/src/resource/views/admin/all/purchase.hbs
@@ -36,7 +36,7 @@
           <td>{{addIndex @index 1}}</td>
           <td>{{this._id}}</td>
           <td>{{formatDate this.purchaseDate}}</td>
-          <td></td>
+          <td>{{this.totalProducts}}</td>
           <td>{{formatNumber this.totalPurchasePrice}}</td>
           <td><a href="/admin/all-purchases/purchase/{{this._id}}">Xem</a></td>
         </tr>
