--- a/src/resource/views/users/allBrands.hbs
+++ b/src/resource/views/users/allBrands.hbs
@@ -16,5 +16,6 @@
   </div>
 </div>
 
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/user/allBrands.js" defer></script>
+<script defer>
+  loadFile('/js/user/allBrands.js')
+</script>
