--- a/src/resource/views/users/detailBrand.hbs
+++ b/src/resource/views/users/detailBrand.hbs
@@ -37,8 +37,9 @@
   </div>
 </div>
 
-<script defer>
+<script>
   brandDetails = `{{brandInfo.details}}`
 </script>
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/user/detailBrand.js" defer></script>
+<script defer>
+  loadFile('/js/user/detailBrand.js')
+</script>
