--- a/src/resource/views/users/detailProduct.hbs
+++ b/src/resource/views/users/detailProduct.hbs
@@ -84,7 +84,7 @@
   </div>
 </div>
 
-<script defer>
+<script>
   var productDetails = `{{newProduct.details}}`
   var productStatus  = `{{newProduct.status}}`
   var productId      = `{{newProduct._id}}`
@@ -92,5 +92,6 @@
   var productPrice   = `{{newProduct.price}}`
   var productImage   = `{{newProduct.img.path}}`
 </script>
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/user/detailProduct.js" defer></script>
+<script defer>
+  loadFile('/js/user/detailProduct.js')
+</script>
