--- a/src/resource/views/users/detailRateOrder.hbs
+++ b/src/resource/views/users/detailRateOrder.hbs
@@ -17,10 +17,9 @@
     </tbody>
   </table>
 
-  <div class="button">
-    <button type="submit">Gửi</button>
-  </div>
+  <div class="button"><button type="submit">Gửi</button></div>
 </div>
 
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/user/detailRateOrder.js" defer></script>
+<script defer>
+  loadFile('/js/user/detailRateOrder.js')
+</script>
