--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -106,5 +106,6 @@
   </div>
 </div>
 
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/user/home.js" defer></script>
+<script defer>
+  loadFile('/js/user/home.js')
+</script>
