--- a/src/resource/views/users/signUp.hbs
+++ b/src/resource/views/users/signUp.hbs
@@ -42,9 +42,9 @@
   </div>
 </div>
 
-<script defer>
+<script>
   var error = `{{error}}`
 </script>
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/checkInput.js" defer></script>
-<script src="/js/user/signUp.js" defer></script>
+<script defer>
+  loadFile('/js/user/signUp.js')
+</script>
