--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -7,14 +7,17 @@
   <meta name="description" content="Buny Store - Cửa hàng mỹ phẩm chính hãng với sản phẩm chăm sóc da và trang điểm từ thương hiệu uy tín. Khám phá bí quyết làm đẹp tại Buny Store!">
   <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/web-img/image_fdrqpl.png" />
   <link rel="stylesheet" href="/css/user/body.css">
-  <link rel="stylesheet" href="/css/user/fixedComponents.css">
-  <link rel="stylesheet" href="/css/user/header.css">
-  <link rel="stylesheet" href="/css/user/footer.css">
+  <link rel="stylesheet" href="/css/user/header.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/user/footer.css" media="print" onload="this.media='all'">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="canonical" href="https://bunny-store.vercel.app/home">
-  <script src="/js/utils.js" async></script>
+  <script src="https://unpkg.com/popper.js@1"></script>
+  <script src="https://unpkg.com/tippy.js@5"></script>
+  <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
+  <script src="/js/layouts/users.js" async></script>
+  <script src="/js/loadFile.js"></script>
   <title>{{title}}</title>
 </head>
 <body>
@@ -28,7 +31,3 @@
   <footer>{{> userFooter}}</footer>
 </body>
 </html>
-
-<script src="https://unpkg.com/popper.js@1"></script>
-<script src="https://unpkg.com/tippy.js@5"></script>
-<script src="/js/layouts/users.js" defer></script>
