--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -40,12 +40,13 @@
   <span class="pagination"></span>
 </div>
 
-<script defer>
+<script>
   var getSlug       = `{{type}}`
   var currentPage   = `{{currentPage}}`
   var productLength = `{{productLength}}`
   var sortedColumn  = `{{sortedColumn}}`
   var sort          = `{{sort}}`
 </script>
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/user/allProducts.js" defer></script>
+<script defer>
+  loadFile('/js/user/allProducts.js')
+</script>
