--- a/src/resource/views/users/detailOrder.hbs
+++ b/src/resource/views/users/detailOrder.hbs
@@ -59,5 +59,6 @@
   </table>
 </div>
 
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/user/detailOrder.js" defer></script>
+<script defer>
+  loadFile('/js/user/detailOrder.js')
+</script>
