--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -34,9 +34,9 @@
   </div>
 </div>
 
-<script defer>
+<script>
   var error = `{{error}}`
 </script>
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/checkInput.js" defer></script>
-<script src="/js/user/signIn.js" defer></script>
+<script defer>
+  loadFile('/js/user/signIn.js')
+</script>
