--- a/src/resource/views/admin/signIn.hbs
+++ b/src/resource/views/admin/signIn.hbs
@@ -31,4 +31,6 @@
 <script>
   var error = `{{error}}`
 </script>
-<script src="/js/admin/signIn.js" defer></script>
+<script defer>
+  loadFile('/js/admin/signIn.js')
+</script>
