--- a/src/public/css/user/profile.css
+++ b/src/public/css/user/profile.css
@@ -19,23 +19,22 @@
       }
     }
     .tag {
-      ul {
-        margin-block-start: 0;
-        margin-block-end: 0;
-        list-style: none;
-        padding-inline-start: 0;
+      padding: 5px;
+      box-sizing: border-box;
+      a {
         display: flex;
         align-items: center;
-        justify-content: center;
-        flex-direction: column;
-      };
-      li {
-        width: 80%;
-        padding: 10px;
+        justify-content: start;
+        gap: 5px;
+        text-decoration: none;
+        color: black;
+        height: 40px;
+        width: 100%;
         border-radius: 5px;
-        cursor: pointer;
+        padding: 5px 10px;
+        box-sizing: border-box;
       }
-      li:hover {
+      a:hover {
         background-color: #FFDFDF;
       }
     }
@@ -72,34 +71,6 @@
         font-weight: bolder;
         text-transform: capitalize;
       }
-      input:not(input[type='radio']) {
-        width: 100%;
-        height: 40px;
-        border: 1px solid black;
-        border-radius: 5px;
-        text-indent: 10px;
-      }
-    }
-    .update-profile-button, .update-feedback-button {
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      button {
-        width: fit-content; 
-        height: 30px;
-        background-color: white;
-        color: #D1A6A6;
-        border: 1px solid #D1A6A6;
-        border-radius: 5px;
-        cursor: pointer;
-      };
-      button:hover {
-        background-color: #D1A6A6;
-        color: white;
-        border: 1px solid white ;
-      }
-      table {text-align: center;}
     }
   }
 }
