--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -16,7 +16,7 @@
   <script src="https://unpkg.com/popper.js@1"></script>
   <script src="https://unpkg.com/tippy.js@5"></script>
   <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
-  <script src="/js/layouts/users.js" async></script>
+  <script src="/js/layouts/users.js"></script>
   <script src="/js/loadFile.js"></script>
   <title>{{title}}</title>
 </head>
