--- a/src/resource/views/admin/all/brand.hbs
+++ b/src/resource/views/admin/all/brand.hbs
@@ -52,9 +52,9 @@
   <span class="pagination"></span>
 </div>
 
-<script>
+<script defer>
   const successful = '{{successful}}'
-  const totalBrand = `{{totalBrand}}`
-  const currentPage = `{{currentPage}}`
+  const totalBrand = '{{totalBrand}}'
+  const currentPage = '{{currentPage}}'
+  loadFile('/js/admin/all/brand.js')
 </script>
-<script src="/js/admin/all/brand.js" defer></script>
