--- a/src/resource/views/admin/all/customer.hbs
+++ b/src/resource/views/admin/all/customer.hbs
@@ -51,7 +51,7 @@
 
 <script>
   const successful = '{{successful}}'
-  const totalCustomer = `{{totalCustomer}}`
-  const currentPage = `{{currentPage}}`
+  const totalCustomer = '{{totalCustomer}}'
+  const currentPage = '{{currentPage}}'
+  loadFile('/js/admin/all/customer.js')
 </script>
-<script src="/js/admin/all/customer.js" defer></script>
