--- a/src/resource/views/admin/all/employee.hbs
+++ b/src/resource/views/admin/all/employee.hbs
@@ -51,7 +51,7 @@
 
 <script>
   const successful = '{{successful}}'
-  const totalEmployee = `{{totalEmployee}}`
-  const currentPage = `{{currentPage}}`
+  const totalEmployee = '{{totalEmployee}}'
+  const currentPage = '{{currentPage}}'
+  loadFile('/js/admin/all/employee.js')
 </script>
-<script src="/js/admin/all/employee.js" defer></script>
