--- a/src/resource/views/admin/all/order.hbs
+++ b/src/resource/views/admin/all/order.hbs
@@ -52,7 +52,7 @@
 
 <script>
   const successful = '{{successful}}'
-  const totalOrder = `{{totalOrder}}`
-  const currentPage = `{{currentPage}}`
+  const totalOrder = '{{totalOrder}}'
+  const currentPage = '{{currentPage}}'
+  loadFile('/js/admin/all/order.js')
 </script>
-<script src="/js/admin/all/order.js" defer></script>
