--- a/src/resource/views/admin/all/product.hbs
+++ b/src/resource/views/admin/all/product.hbs
@@ -79,7 +79,7 @@
 
 <script>
   const successful = '{{successful}}'
-  const totalProduct = `{{totalProduct}}`
-  const currentPage = `{{currentPage}}`
+  const totalProduct = '{{totalProduct}}'
+  const currentPage = '{{currentPage}}'
+  loadFile('/js/admin/all/product.js')
 </script>
-<script src="/js/admin/all/product.js" defer></script>
