--- a/src/resource/views/admin/all/purchase.hbs
+++ b/src/resource/views/admin/all/purchase.hbs
@@ -51,7 +51,7 @@
 
 <script>
   const successful = '{{successful}}'
-  const totalPurchase = `{{totalPurchase}}`
-  const currentPage = `{{currentPage}}`
+  const totalPurchase = '{{totalPurchase}}'
+  const currentPage = '{{currentPage}}'
+  loadFile('/js/admin/all/purchase.js')
 </script>
-<script src="/js/admin/all/purchase.js" defer></script>
