--- a/src/resource/views/admin/create/brand.hbs
+++ b/src/resource/views/admin/create/brand.hbs
@@ -31,4 +31,6 @@
   </form>
 </div>
 
-<script src="/js/admin/create/brand.js" defer></script>
+<script>
+  loadFile('/js/admin/create/brand.js')
+</script>
