--- a/src/resource/views/admin/create/customer.hbs
+++ b/src/resource/views/admin/create/customer.hbs
@@ -44,4 +44,6 @@
   </form>
 </div>
 
-<script src="/js/admin/create/customer.js" defer></script>
+<script>
+  loadFile('/js/admin/create/customer.js')
+</script>
