--- a/src/resource/views/admin/create/employee.hbs
+++ b/src/resource/views/admin/create/employee.hbs
@@ -64,4 +64,6 @@
   </form>
 </div>
 
-<script src="/js/admin/create/employee.js" defer></script>
+<script>
+  loadFile('/js/admin/create/employee.js')
+</script>
