--- a/src/resource/views/admin/create/order.hbs
+++ b/src/resource/views/admin/create/order.hbs
@@ -80,4 +80,6 @@
   </form>
 </div>
 
-<script src="/js/admin/create/order.js" defer></script>
+<script>
+  loadFile('/js/admin/create/order.js')
+</script>
