--- a/src/resource/views/admin/create/product.hbs
+++ b/src/resource/views/admin/create/product.hbs
@@ -109,4 +109,6 @@
   </form>
 </div>
 
-<script src="/js/admin/create/product.js" defer></script>
+<script>
+  loadFile('/js/admin/create/product.js')
+</script>
