--- a/src/resource/views/admin/create/purchase.hbs
+++ b/src/resource/views/admin/create/purchase.hbs
@@ -70,4 +70,6 @@
   </form>
 </div>
 
-<script src="/js/admin/create/purchase.js" defer></script>
+<script>
+  loadFile('/js/admin/create/purchase.js')
+</script>
