--- a/src/resource/views/admin/create/store.hbs
+++ b/src/resource/views/admin/create/store.hbs
@@ -26,4 +26,6 @@
   </form>
 </div>
 
-<script src="/js/admin/create/store.js" defer></script>
+<script>
+  loadFile('/js/admin/create/store.js')
+</script>
