--- a/src/resource/views/admin/detail/customer.hbs
+++ b/src/resource/views/admin/detail/customer.hbs
@@ -70,6 +70,5 @@
 <script>
   var gender = '{{customerInfo.userInfo.gender}}'
   var successful = '{{successful}}'
-  console.log('default')
+  loadFile('/js/admin/detail/customer.js')
 </script>
-<script src="/js/admin/detail/customer.js" defer></script>
