--- a/src/resource/views/admin/detail/employee.hbs
+++ b/src/resource/views/admin/detail/employee.hbs
@@ -61,5 +61,5 @@
   var gender  = '{{employeeInfo.userInfo.gender}}'
   var storeId = '{{employeeInfo.userInfo.storeId}}'
   var successful = '{{successful}}'
+  loadFile('/js/admin/detail/employee.js')
 </script>
-<script src="/js/admin/detail/employee.js" defer></script>
