--- a/src/resource/views/admin/detail/product.hbs
+++ b/src/resource/views/admin/detail/product.hbs
@@ -84,11 +84,11 @@
 </div>
 
 <script>
-  var productCategories  = `{{productInfo.categories}}`
-  var productStatus      = `{{productInfo.status}}`
-  var productNewArrival  = `{{productInfo.newArrival}}`
-  var productSkincare    = `{{productInfo.skincare}}`
-  var productMakeup      = `{{productInfo.makeup}}`
+  var productCategories  = '{{productInfo.categories}}'
+  var productStatus      = '{{productInfo.status}}'
+  var productNewArrival  = '{{productInfo.newArrival}}'
+  var productSkincare    = '{{productInfo.skincare}}'
+  var productMakeup      = '{{productInfo.makeup}}'
   var successful         = '{{successful}}'
+  loadFile('/js/admin/detail/product.js')
 </script>
-<script src="/js/admin/detail/product.js" defer></script>
