--- a/src/resource/views/admin/detail/purchase.hbs
+++ b/src/resource/views/admin/detail/purchase.hbs
@@ -64,5 +64,5 @@
 
 <script>
   var successful = '{{successful}}'
+  loadFile('/js/admin/detail/purchase.js')
 </script>
-<script src="/js/admin/detail/purchase.js" defer></script>
