--- a/src/resource/views/admin/signIn.hbs
+++ b/src/resource/views/admin/signIn.hbs
@@ -29,8 +29,6 @@
 </div>
 
 <script>
-  var error = `{{error}}`
-</script>
-<script defer>
+  var error = '{{error}}'
   loadFile('/js/admin/signIn.js')
 </script>
