--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -53,10 +53,10 @@
     </ul>
   </div>
 
-  <div class="title"><a href="/introduce">GIỚI THIỆU</a></div>
-  <div class="title"><a href="/all-products/new-arrival">HÀNG MỚI VỀ</a></div>
-  <div class="title"><a href="/all-orders/checking">ĐƠN HÀNG</a></div>
-  <div class="title"><i class="fi fi-br-search" ></i></div>
+  <div class="header-title"><a href="/introduce">GIỚI THIỆU</a></div>
+  <div class="header-title"><a href="/all-products/new-arrival">HÀNG MỚI VỀ</a></div>
+  <div class="header-title"><a href="/all-orders/checking">ĐƠN HÀNG</a></div>
+  <div class="header-title"><i class="fi fi-br-search" ></i></div>
 </div>
 
 <div class="header-button">
