--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -8,22 +8,7 @@
   
   <div class="products">
     {{#each (checkStatus products 'flash-sale' 5)}}
-      <a href="/all-products/product/{{this._id}}">
-        <div class="product" data-tippy-content="{{this.name}}">
-          <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
-          <del style="color: black;"><p>{{formatNumber this.oldPrice}}</p></del>
-          <p id="product-price">{{formatNumber this.price}}</p>
-          <p id="product-details">{{this.name}}</p>
-          <p id="product-rate">
-            {{this.rate}}/5
-            <i class="fi fi-ss-star"></i>
-            <i class="fi fi-ss-star"></i>
-            <i class="fi fi-ss-star"></i>
-            <i class="fi fi-ss-star"></i>
-            <i class="fi fi-ss-star"></i>
-          </p>
-        </div>
-      </a>  
+      {{> product}}
     {{/each}}
   </div>
 </div>
@@ -38,21 +23,7 @@
   
   <div class="products">
     {{#each (checkStatus products 'hot' 5)}}
-      <a href="/all-products/product/{{this._id}}">
-        <div class="product" data-tippy-content="{{this.name}}">
-          <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
-          <p id="product-price">{{formatNumber this.price}}</p>
-          <p id="product-details">{{this.name}}</p>
-          <p id="product-rate">
-            {{this.rate}}/5
-            <i class="fi fi-ss-star"></i>
-            <i class="fi fi-ss-star"></i>
-            <i class="fi fi-ss-star"></i>
-            <i class="fi fi-ss-star"></i>
-            <i class="fi fi-ss-star"></i>
-          </p>
-        </div>
-      </a>
+      {{> product}}
     {{/each}}
   </div>
 </div>
@@ -67,21 +38,7 @@
 
   <div class="products">
     {{#each (limit products 5)}}
-      <a href="/all-products/product/{{this._id}}">
-        <div class="product" data-tippy-content="{{this.name}}">
-          <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
-          <p id="product-price">{{formatNumber this.price}}</p>
-          <p id="product-details">{{this.name}}</p>
-          <p id="product-rate">
-            {{this.rate}}/5
-            <i class="fi fi-ss-star"></i>
-            <i class="fi fi-ss-star"></i>
-            <i class="fi fi-ss-star"></i>
-            <i class="fi fi-ss-star"></i>
-            <i class="fi fi-ss-star"></i>
-          </p>
-        </div>
-      </a>
+      {{> product}}
     {{/each}}
   </div>
 </div>
