--- a/src/public/css/user/detailRateOrder.css
+++ b/src/public/css/user/detailRateOrder.css
@@ -1,6 +1,7 @@
 .detail-rate-order-container {
   .rate-star {
     padding: 5px;
+    i { cursor: pointer}
   }
 }
 @media screen and (max-width: 700px) {
