--- a/src/resource/views/admin/all/store.hbs
+++ b/src/resource/views/admin/all/store.hbs
@@ -49,7 +49,7 @@
 
 <script>
   const successful = '{{successful}}'
-  const totalStore = `{{totalStore}}`
-  const currentPage = `{{currentPage}}`
+  const totalStore = '{{totalStore}}'
+  const currentPage = '{{currentPage}}'
+  loadFile('/js/admin/all/store.js')
 </script>
-<script src="/js/admin/all/store.js" defer></script>
