--- a/src/resource/views/admin/all/supplier.hbs
+++ b/src/resource/views/admin/all/supplier.hbs
@@ -51,7 +51,7 @@
 
 <script>
   const successful = '{{successful}}'
-  const totalSupplier = `{{totalSupplier}}`
-  const currentPage = `{{currentPage}}`
+  const totalSupplier = '{{totalSupplier}}'
+  const currentPage = '{{currentPage}}'
+  loadFile('/js/admin/all/supplier.js')
 </script>
-<script src="/js/admin/all/supplier.js" defer></script>
