--- a/src/resource/views/admin/all/trash.hbs
+++ b/src/resource/views/admin/all/trash.hbs
@@ -72,7 +72,7 @@
 
 <script>
   const successful = '{{successful}}'
-  const totalDeletedProduct = `{{totalDeletedProduct}}`
-  const currentPage = `{{currentPage}}`
+  const totalDeletedProduct = '{{totalDeletedProduct}}'
+  const currentPage = '{{currentPage}}'
+  loadFile('/js/admin/all/trash.js')
 </script>
-<script src="/js/admin/all/trash.js" defer></script>
