--- a/src/resource/views/admin/create/supplier.hbs
+++ b/src/resource/views/admin/create/supplier.hbs
@@ -32,4 +32,6 @@
   </form>
 </div>
 
-<script src="/js/admin/create/supplier.js" defer></script>
+<script>
+  loadFile('/js/admin/create/supplier.js')
+</script>
