--- a/src/resource/views/admin/detail/brand.hbs
+++ b/src/resource/views/admin/detail/brand.hbs
@@ -58,5 +58,5 @@
 
 <script>
   var successful = '{{successful}}'
+  loadFile('/js/admin/detail/brand.js')
 </script>
-<script src="/js/admin/detail/brand.js" defer></script>
