--- a/src/resource/views/admin/detail/order.hbs
+++ b/src/resource/views/admin/detail/order.hbs
@@ -78,7 +78,7 @@
 </div>
 
 <script>
-  var orderStatus = `{{orderInfo.status}}`
+  var orderStatus = '{{orderInfo.status}}'
   var successful = '{{successful}}'
+  loadFile('/js/admin/detail/order.js')
 </script>
-<script src="/js/admin/detail/order.js" defer></script>
