--- a/src/resource/views/admin/detail/profile.hbs
+++ b/src/resource/views/admin/detail/profile.hbs
@@ -34,7 +34,7 @@
 </div>   
 
 <script>
-  var gender = `{{userInfo.userInfo.gender}}`
+  var gender = '{{userInfo.userInfo.gender}}'
   var successful = '{{successful}}'
+  loadFile('/js/admin/detail/profile.js')
 </script>
-<script src="/js/admin/profile.js" defer></script>  
