--- a/src/resource/views/admin/detail/store.hbs
+++ b/src/resource/views/admin/detail/store.hbs
@@ -56,5 +56,5 @@
 
 <script>
   var successful = '{{successful}}'
+  loadFile('/js/admin/detail/store.js')
 </script>
-<script src="/js/admin/detail/store.js" defer></script>
