--- a/src/resource/views/admin/detail/supplier.hbs
+++ b/src/resource/views/admin/detail/supplier.hbs
@@ -64,5 +64,5 @@
 
 <script>
   var successful = '{{successful}}'
+  loadFile('/js/admin/detail/supplier.js')
 </script>
-<script src="/js/admin/detail/supplier.js" defer></script>
