--- a/src/resource/views/partials/denyUserAccess.hbs
+++ b/src/resource/views/partials/denyUserAccess.hbs
@@ -1,4 +1,4 @@
 <div class="deny-access-container">
-  <h1>Sorry, You dont have permission to access !!!</h1>
+  <h1>Page not found</h1>
   <h3><a href="/">Back to shopping</a></h3>
 </div>
