--- a/src/resource/views/users/detailProduct.hbs
+++ b/src/resource/views/users/detailProduct.hbs
@@ -7,9 +7,9 @@
     </div>
     
     <div class="details-box">
-      <div class="title">
+      <div class="product-title">
         <h4 id="product-rate">
-          {{newProduct.rate}}/5
+          {{formatRate newProduct.rate}}/5
           <i class="fi fi-ss-star"></i>
           <i class="fi fi-ss-star"></i>
           <i class="fi fi-ss-star"></i>
@@ -56,9 +56,9 @@
     <div class="comment-list">
       {{#each comments}}
         <div class="comment">
-          <p>user{{this.senderId}}</p>
-          <p>{{formatDate this.createdAt}}</p>
-          <p>{{this.content}}</p>
+          <p id="sender">user{{this.senderId}}</p>
+          <p id="send-date">{{formatDate this.createdAt}}</p>
+          <p id="comment">{{this.comment}}</p>
         </div>
       {{/each}}
     </div>
@@ -70,17 +70,10 @@
     </div>
 
     <div class="products">
-      {{#each relatedProducts}}
-      <a href="/all-products/product/{{this._id}}">
-        <div class="product">
-          <img src="{{this.img.path}}" alt="{{this.name}}" id="product-1" loading="lazy">
-          <del><h4 id="product-old-price">{{formatNumber this.oldPrice}}</h4></del>
-          <h3 id="product-price">{{formatNumber this.price}}</h3>
-          <p id="product-details">{{this.name}}</p>
-        </div>
-      </a>
-      {{/each}}
-    </div>
+    {{#each relatedProducts}}
+      {{> product}}
+    {{/each}}
+  </div>
   </div>
 </div>
 
@@ -91,7 +84,5 @@
   var productName    = `{{newProduct.name}}`
   var productPrice   = `{{newProduct.price}}`
   var productImage   = `{{newProduct.img.path}}`
-</script>
-<script defer>
   loadFile('/js/user/detailProduct.js')
 </script>
