--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -71,7 +71,19 @@
       </div>
     </div>
 
-    <div class="button"><button title="submit" type="submit" class="submit-button">Hoàn tất đặt hàng</button></div>
+    <div class="button"><button title="submit" type="submit" class="submit-button" onclick="reply_click()">Hoàn tất đặt hàng</button></div>
+
+    <div id="id01" class="modal">
+      <div class="modal-content">
+        <div class="container">
+          <p><strong>Xác nhận đặt đơn !!!</strong></p>
+          <div class="clearfix">
+            <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Huỷ</button>
+            <button title="submit" type="submit" class="submit-button">Đồng ý</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </form>
 
   <div class="button"><button class="next-button">Tiếp tục</button></div>
