--- a/src/public/css/admin/body.css
+++ b/src/public/css/admin/body.css
@@ -180,7 +180,7 @@ div.submit-button {
   justify-content: center;
   padding: 10px 0 10px 0;
 }
-.pagination {
+div.pagination {
   display: flex; 
   align-items: center; 
   justify-content: center; 
@@ -195,6 +195,66 @@ div.submit-button {
     width: 20px;
     color: black;
   }
+}
+div.notification {
+  position: fixed;
+  opacity: 0;
+  left: 50%;
+  height: 50px;
+  width: 300px;
+  z-index: 9999;
+  background-color: white;
+  color: #567A0D;
+  border-radius: 10px;
+  border: 1px solid #D1A6A6;
+  box-sizing: border-box;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation-name: notification;
+  animation-duration: 3s;
+  animation-timing-function: linear
+}
+div.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 2; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0, 0, 0, 0.4);
+  .modal-content {
+    background-color: #fefefe;
+    border: 1px solid #888;
+    width: 50%; /* Could be more or less, depending on screen size */
+    border-radius: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    .container {
+      padding: 16px;
+      text-align: center;
+    }
+    .cancelbtn {
+      background-color: #ccc;
+      color: black;
+      width: 25%;
+    }
+    .deletebtn {
+      background-color: #f44336;
+      color: black;
+      width: 25%;
+    }
+  }
+}
+div.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 } 
 
 /* create item page */
@@ -299,27 +359,6 @@ div.submit-button {
       }
     }
   }
-}
-
-div.notification {
-  position: fixed;
-  opacity: 0;
-  left: 50%;
-  height: 50px;
-  width: 300px;
-  z-index: 9999;
-  background-color: white;
-  color: #567A0D;
-  border-radius: 10px;
-  border: 1px solid #D1A6A6;
-  box-sizing: border-box;
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  animation-name: notification;
-  animation-duration: 3s;
-  animation-timing-function: linear
 }
 
 @keyframes notification {
