--- a/src/public/css/user/body.css
+++ b/src/public/css/user/body.css
@@ -223,6 +223,47 @@ button:hover {
   background-color: #D1A6A6;
   color: white;
 }
+div.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 2; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0, 0, 0, 0.4);
+  .modal-content {
+    background-color: #fefefe;
+    border: 1px solid #888;
+    width: 50%; /* Could be more or less, depending on screen size */
+    border-radius: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    .container {
+      padding: 16px;
+      text-align: center;
+    }
+    .cancelbtn {
+      background-color: #ccc;
+      color: black;
+      width: 25%;
+    }
+    .deletebtn {
+      background-color: #f44336;
+      color: black;
+      width: 25%;
+    }
+  }
+}
+div.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+} 
+
 @keyframes reloader {
   to { transform: rotate(360deg)}
 }
