--- a/src/resource/views/partials/product.hbs
+++ b/src/resource/views/partials/product.hbs
@@ -4,7 +4,7 @@
     <p id="product-price">{{formatNumber this.price}}</p>
     <p id="product-details">{{this.name}}</p>
     <p id="product-rate">
-      {{formatRate this.rate}}/5
+      <span id="rate-score">{{formatRate this.rate}}</span>/5
       <i class="fi fi-ss-star"></i>
       <i class="fi fi-ss-star"></i>
       <i class="fi fi-ss-star"></i>
