--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -73,4 +73,4 @@
 <script>
   var isUser = `{{isUser}}`
 </script>
-<script src="/js/partials/userHeader.js" defer></script>
+<script src="/js/partials/userHeader.js"></script>
