--- a/src/resource/views/users/detailProduct.hbs
+++ b/src/resource/views/users/detailProduct.hbs
@@ -8,14 +8,14 @@
     
     <div class="details-box">
       <div class="product-title">
-        <h4 id="product-rate">
-          {{formatRate newProduct.rate}}/5
+        <p id="product-rate">
+          <span id="rate-score">{{formatRate newProduct.rate}}</span>/5
           <i class="fi fi-ss-star"></i>
           <i class="fi fi-ss-star"></i>
           <i class="fi fi-ss-star"></i>
           <i class="fi fi-ss-star"></i>
           <i class="fi fi-ss-star"></i>
-        </h4>
+        </p>
         <h3>{{newProduct.brand}}</h3>
         <h1>{{newProduct.name}}</h1>
         <del><h4 id="product-old-price">{{formatNumber newProduct.oldPrice}}</h4></del>
@@ -86,3 +86,4 @@
   var productImage   = `{{newProduct.img.path}}`
   loadFile('/js/user/detailProduct.js')
 </script>
+<script src="/js/user/product.js" defer></script>
