--- a/src/public/css/user/allProducts.css
+++ b/src/public/css/user/allProducts.css
@@ -7,6 +7,10 @@
   .filter {
     width: 100%;
     max-width: 1300px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 20px;
   }
   .filter-btn {
     background-color: #FFDFDF;
