--- a/src/resource/views/partials/fixedComponents.hbs
+++ b/src/resource/views/partials/fixedComponents.hbs
@@ -1,5 +1,7 @@
 <div class="dropup">
-  <span><i class="fi fi-sr-circle-phone-flip"></i></span>
+  <span>
+    <i class="fi fi-sr-circle-phone-flip"></i>
+  </span>
   <div class="dropup-content">
     <div class="content">
       <a target="_blank" href="https://www.facebook.com/bunnylylyyy"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="loading" loading="lazy"/></a>
@@ -12,7 +14,7 @@
   </div>              
 </div>
 
-<div class="chat-icon">
+<div class="chat-icon" data-tippy-content="Chat với mình luôn nhé">
   <i class="fi fi-sr-comment-quote"></i>
 </div>
 
