--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -8,11 +8,32 @@
   <div class="all-category-makeup"></div>
 
   <div class="filter">
-    <select class="filter-btn">
-      <option value="">Sắp xếp theo</option>
-      <option value="asc">Giá tăng dần</option>
-      <option value="desc">Giá giảm dần</option>
-    </select>
+    <div>
+      <label for="price">Giá bán</label>
+      <select id="price" class="filter-btn">
+        <option value="">Sắp xếp theo</option>
+        <option value="asc">Giá tăng dần</option>
+        <option value="desc">Giá giảm dần</option>
+      </select>
+    </div>
+
+    <div>
+      <label for="rate">Đánh giá</label>
+      <select id="rate" class="filter-btn">
+        <option value="">Sắp xếp theo</option>
+        <option value="asc">Giá tăng dần</option>
+        <option value="desc">Giá giảm dần</option>
+      </select>
+    </div>
+    
+    <div>
+      <label for="saleNumber">Lượng bán</label>
+      <select id="saleNumber" class="filter-btn">
+        <option value="">Sắp xếp theo</option>
+        <option value="asc">Giá tăng dần</option>
+        <option value="desc">Giá giảm dần</option>
+      </select>
+    </div>
   </div>
 
   <div class="products">
