--- a/src/resource/views/users/signUp.hbs
+++ b/src/resource/views/users/signUp.hbs
@@ -1,7 +1,6 @@
 <div class="sign-up-container">
   <div class="sign-up-form">
-    <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.jpg" alt="signup_img">
-    <div class="form-input" loading="lazy">
+  <img src="https://res.cloudinary.com/bunny-store/image/upload/v1737559909/web-img/377cb88c-c18e-40e4-b653-fc30a1dad316.png" loading="lazy">    <div class="form-input" loading="lazy">
       <p class="form-title">Đăng ký</p>
       <form id="form-1" method="post" action="/authentication/creating-account">
         <div class="form-group">
