--- a/src/resource/views/layouts/empty.hbs
+++ b/src/resource/views/layouts/empty.hbs
@@ -19,7 +19,7 @@
   <title>{{title}}</title>
 </head>
 <body>
-  <div class="preloader">
+  <div class="preloader" style="top: 0px">
     <div class="loading"></div>
     <h3 style="color: #D1A6A6;"></h3>
   </div>
