--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -1,4 +1,4 @@
-<div class="store-logo">
+<div class="store-logo" data-tippy-content="Trang chủ">
   <a href="/home">
     <p style="display: none;">logo</p>
     <img src="https://res.cloudinary.com/bunny-store/image/upload/v1731735805/web-img/logo_xkavlj.webp" alt="logo" loading="lazy"/>
@@ -56,15 +56,15 @@
   <div class="header-title"><a href="/introduce">GIỚI THIỆU</a></div>
   <div class="header-title"><a href="/all-products/new-arrival">HÀNG MỚI VỀ</a></div>
   <div class="header-title"><a href="/all-orders/checking">ĐƠN HÀNG</a></div>
-  <div class="header-title"><i class="fi fi-br-search" ></i></div>
+  <div class="header-title" data-tippy-content="Tìm kiếm sản phẩm"><i class="fi fi-br-search" ></i></div>
 </div>
 
 <div class="header-button">
   <a href="/all-orders" class="orders">
     <span class="orders-quantity"></span>    
-    <i class="fi fi-rr-shopping-cart-add"></i>
+    <i class="fi fi-rr-shopping-cart-add" data-tippy-content="Xem giỏ hàng"></i>
   </a>
-  <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.webp" class="dropdown-avatar" alt="loading"/>
+  <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.webp" class="dropdown-avatar" alt="loading" data-tippy-content="Đăng nhập/Đăng xuất"/>
 </div>
 
 <div class="avatar-menu"></div>
