--- a/src/public/css/admin/body.css
+++ b/src/public/css/admin/body.css
@@ -180,7 +180,7 @@ div.submit-button {
   justify-content: center;
   padding: 10px 0 10px 0;
 }
-div.pagination {
+span.pagination {
   display: flex; 
   align-items: center; 
   justify-content: center; 
