--- a/src/resource/views/admin/create/brand.hbs
+++ b/src/resource/views/admin/create/brand.hbs
@@ -1,5 +1,5 @@
 <div class="admin-create-brand-container">
-  <form id="form-1" method="post" action="/admin/all-brands/brand/created" enctype="multipart/form-data">
+  <form id="form-1" method="post" action="/admin/all-brands/brand/created">
     <div class="form-title">
       <p>Thêm thương hiệu mới</p>
     </div>
