--- a/src/public/css/user/detailProduct.css
+++ b/src/public/css/user/detailProduct.css
@@ -53,7 +53,7 @@
     width: 50%;
     height: 100%;
     margin: 10px;
-    .title {
+    .product-title {
       width: 100%;
       display: flex;
       flex-direction: column;
