--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -68,7 +68,7 @@
 </div>
 
 <div class="avatar-menu"></div>
-<form method="get" action="" class="search-form"></form>
+<form method="get" action="/home/search" class="search-form"></form>
 
 <script>
   var isUser = `{{isUser}}`
