--- a/src/resource/views/admin/detail/customer.hbs
+++ b/src/resource/views/admin/detail/customer.hbs
@@ -33,7 +33,7 @@
       </tr>
       <tr>
         <td>Tổng doanh thu</td>
-        <td>{{formatNumber totalPrice}}</td>
+        <td>{{formatNumber customerInfo.revenue}}</td>
       </tr>
     </table>
 
