--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -184,8 +184,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js"></script>
 <script>
   var successful = '{{successful}}'
+  console.log(successful)
   loadFile('/js/admin/home.js')
-  console.log('successful')
   const customer  = document.getElementById('customer')
   const purchase  = document.getElementById('purchase')
   const order     = document.getElementById('order')
