--- a/src/public/css/admin/body.css
+++ b/src/public/css/admin/body.css
@@ -185,15 +185,15 @@ span.pagination {
   align-items: center; 
   justify-content: center; 
   gap: 10px;
-  a {
+  p {
     display: flex;
     align-items: center;
     justify-content: center;
     border: 1px solid black;
     border-radius: 5px;
-    text-decoration: none;
     width: 20px;
     color: black;
+    cursor: pointer;
   }
 }
 div.notification {
