--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -71,7 +71,7 @@
       </div>
     </div>
 
-    <div class="button"><button title="submit" type="submit" class="submit-button" onclick="reply_click()">Hoàn tất đặt hàng</button></div>
+    <div class="button"><button title="submit" type="submit" class="submit-button">Hoàn tất đặt hàng</button></div>
 
     <div id="id01" class="modal">
       <div class="modal-content">
